Fix file name alignment

--- a/src/components/FileUpload.css
+++ b/src/components/FileUpload.css
@@ -19,6 +19,7 @@
 
 .file-icon {
   color: #fcba19;
+  margin: 0 0.3em 0 0;
 }
 
 .file-upload-container:disabled {
@@ -38,4 +39,18 @@
 
 .file-upload-container .sub-title {
   font-size: 0.8em;
+}
+
+.file-list li {
+  padding: 0.3em 0 0.3em 0.1em;
+  height: 2em;
+  /* background: yellow; */
+}
+
+.file-list li span {
+  padding: 0.2em 0;
+  color: darkslategrey;
+  /* background: blue; */
+  height: 1em;
+  text-align: left;
 }
